# Django

livraria/: db.sqlite3  pyproject.toml
livraria/core/: admin.py  models.py
livraria/livraria/: settings.py
