[tool.poetry]
name = "Livraria Conhecer"
version = "0.1.0"
description = ""
authors = ["iker <ikerpires407@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
